# vrs

./: CMakeLists.txt
build_third_party_libs/: build_ffmpeg_linuxunix.sh  build_ocean_linuxunix.sh
cmake/: FindOcean.cmake  LibrariesSetup.cmake
sample_code/: CMakeLists.txt  FFmpegTest.cpp  OceanTest.cpp
tools/vrs/: CMakeLists.txt  SharedInit.hpp  vrs.cpp
tools/vrsplayer/: CMakeLists.txt  main.cpp
vrs/: CMakeLists.txt  TelemetryLogger.cpp
vrs/utils/: CMakeLists.txt  PixelFrame.cpp
vrs/utils/xprs_decoder/: CMakeLists.txt
vrs/xprs/: xprsDecApi.cpp
